# LifeOps

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
app/: gradio_app.py
data/: scenarios.json  train_dataset.json
docs/: BLOG.md  architecture.md
notebooks/: train_lifeops.ipynb
scripts/: baseline.py  dataset_builder.py  evaluate.py  evaluate_real_model.py  hf_enrichment.py  lifeops_grpo_metrics.py  push_hf_space.ps1  push_hf_space.sh  push_origin_and_hf.ps1  push_origin_and_hf.sh  rl_action_utils.py  train.py
server/: Dockerfile  __init__.py  agents.py  app.py  lifeops_environment.py  npc_engine.py  parser.py  requirements.txt  rewards.py  scenario_generator.py
tests/: test_env.py  test_phase3.py  test_phase5.py  test_phase6.py  test_phase7.py
